# mailprune

./: .gitignore  AGENTS.md  README.md  USERGUIDE.md  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: analyze_emails.py  mailprune.py  run_audit.py
src/mailprune/: __init__.py  analysis.py  audit.py  cli.py  constants.py  mcp_server.py  utils.py
src/mailprune/commands/: __init__.py  audit.py  cluster.py  engagement.py  patterns.py  report.py  summary.py  title_patterns.py  unread_by_category.py
src/mailprune/utils/: __init__.py  analysis.py  audit.py  constants.py  helpers.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_mcp.py  test_utils.py
