[project]
name = "mailprune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "pandas>=2.3.3",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "Q"]
extend-ignore = ["E203"]

[tool.isort]
profile = "black"
line_length = 160

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true


[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251219",
    "ruff>=0.14.10",
]
