[project]
name = "mailprune"
version = "0.1.0"
description = "Intelligent email management system that identifies noise makers and provides cleanup strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.3.0",
]

[project.scripts]
mailprune = "mailprune.cli:cli"

[tool.setuptools]
packages = ["mailprune"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
mailprune = ["data/*"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "Q"]
extend-ignore = ["E203", "C901"]

[tool.isort]
profile = "black"
line_length = 160

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251219",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.10",
]
